name:               liquid-containers
version:            0.8.10.1
synopsis:           LiquidHaskell specs for the containers package
description:        LiquidHaskell specs for the containers package.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Simple
cabal-version:      >= 1.22

data-files:           src/Data/Set.spec

library
  exposed-modules:    Data.Containers.ListUtils
                      Data.IntMap
                      Data.IntMap.Lazy
                      Data.IntMap.Strict
                      Data.IntMap.Strict.Internal
                      Data.IntMap.Internal
                      Data.IntMap.Internal.Debug
                      Data.IntMap.Merge.Lazy
                      Data.IntMap.Merge.Strict
                      Data.IntSet.Internal
                      Data.IntSet
                      Data.Map
                      Data.Map.Lazy
                      Data.Map.Merge.Lazy
                      Data.Map.Strict.Internal
                      Data.Map.Strict
                      Data.Map.Merge.Strict
                      Data.Map.Internal
                      Data.Map.Internal.Debug
                      Data.Set.Internal
                      Data.Set
                      Data.Graph
                      Data.Sequence
                      Data.Sequence.Internal
                      Data.Sequence.Internal.Sorting
                      Data.Tree
                      Utils.Containers.Internal.BitUtil
                      Utils.Containers.Internal.BitQueue
                      Utils.Containers.Internal.StrictPair
  hs-source-dirs:     src
  build-depends:      liquid-base          >= 0.8.10.1
                    , containers           >= 0.5.9.2
                    , liquidhaskell        >= 0.8.10.1
  default-language:   Haskell98
  default-extensions: PackageImports
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
