name:               liquid-containers
version:            0.8.10.1
synopsis:           LiquidHaskell specs for the containers package
description:        LiquidHaskell specs for the containers package.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom
cabal-version:      >= 1.22

data-files:           src/Data/Set.spec

custom-setup
  setup-depends: Cabal, base, liquidhaskell

library
  exposed-modules:    Data.Set
                      Data.Map
  hs-source-dirs:     src
  build-depends:      liquid-base          >= 0.8.10.1
                    , containers           >= 0.5.9.2
                    , liquidhaskell        >= 0.8.10.1
  default-language:   Haskell98
  default-extensions: PackageImports
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
