cabal-version:      1.24
name:               liquid-ghc-prim
version:            0.7.0.1
synopsis:           Drop-in ghc-prim replacement for LiquidHaskell
description:        Drop-in ghc-prim replacement for LiquidHaskell.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom

data-files:         src/GHC/*.spec


custom-setup
  setup-depends: Cabal<4, base<5, liquidhaskell

library
  exposed-modules:
                    -- We can't really export 'GHC.Prim' or this won't build on Windows,
                    -- unfortunately. The issue is that 'GHC.Prim' is a special snowflake,
                    -- treated specially by the GHC pipeline. In particular, GHC doesn't
                    -- generate a '.hi' file for it, and this causes Windows' builds to choke.
                    GHC.Prim
                    GHC.CString
                    GHC.Classes
                    GHC.Debug
                    GHC.IntWord64
                    GHC.Magic
                    GHC.Prim.Ext
                    GHC.PrimopWrappers
                    GHC.Tuple
                    GHC.Types

  hs-source-dirs:     src
  build-depends:      ghc-prim             >= 0.7.0 && < 0.8
                    , liquidhaskell        >= 0.9.0.2
  default-language:   Haskell2010
  default-extensions: PackageImports
                      NoImplicitPrelude
                      MagicHash
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
