cabal-version:      2.0
name:               liquid-ghc-prim
version:            0.7.0.1
synopsis:           Drop-in ghc-prim replacement for LiquidHaskell
description:        Drop-in ghc-prim replacement for LiquidHaskell.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom

data-files:         src/GHC/*.spec


custom-setup
  setup-depends: Cabal<4, base<5, liquidhaskell

library
  exposed-modules:
                    -- We can't really export 'GHC.Prim' or this won't build on Windows,
                    -- unfortunately. The issue is that 'GHC.Prim' is a special snowflake,
                    -- treated specially by the GHC pipeline. In particular, GHC doesn't
                    -- generate a '.hi' file for it, and this causes Windows' builds to choke.
                    GHC.Prim
                    GHC.CString
                    GHC.Classes
                    GHC.Debug
                    GHC.Magic
                    GHC.Prim.Exception
                    GHC.Prim.Ext
                    GHC.Prim.Panic
                    GHC.Tuple
                    GHC.Types

  hs-source-dirs:     src
  build-depends:      ghc-prim             ^>= 0.8
                    , liquidhaskell        >= 0.9.0.2
  default-language:   Haskell2010
  default-extensions: PackageImports
                      NoImplicitPrelude
                      MagicHash
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
