cabal-version:      1.24
name:               liquid-parallel
version:            3.2.2.0
synopsis:           LiquidHaskell specs for the parallel package
description:        LiquidHaskell specs for the parallel package.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom

data-files:           src/Control/Parallel/Strategies.spec

custom-setup
  setup-depends: Cabal, base, liquidhaskell

library
  exposed-modules:    Control.Seq
                      Control.Parallel
                      Control.Parallel.Strategies
  hs-source-dirs:     src
  build-depends:      liquid-base          < 4.15
                    , parallel             >= 3.2.0.0 && < 3.3
                    , liquidhaskell        >= 0.8.10.1
  default-language:   Haskell2010
  default-extensions: PackageImports
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
