cabal-version:      1.24
name:               liquid-parallel
version:            3.2.2.0.2
synopsis:           LiquidHaskell specs for the parallel package
description:        LiquidHaskell specs for the parallel package.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom

custom-setup
  setup-depends: Cabal<4, base<5, liquidhaskell-boot

library
  exposed-modules:    Control.Parallel.Strategies_LHAssumptions
  hs-source-dirs:     src
  build-depends:      base          < 5
                    , parallel             >= 3.2.2.0 && < 3.3
                    , liquidhaskell        >= 0.9.2.5
  default-language:   Haskell2010
  default-extensions: PackageImports
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
