cabal-version:      1.22
name:               liquid-platform
version:            0.8.10.2
synopsis:           A battery-included platform for LiquidHaskell
description:        A battery-included platform for LiquidHaskell.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Simple

flag devel
  default:     False
  manual:      True
  description: turn on stricter error reporting for development

executable liquidhaskell
  main-is:            src/Liquid.hs
  default-language:   Haskell2010
  ghc-options:        -W -threaded
  if impl(ghc < 8.10.1)
    buildable: False
  else
    buildable: True
    build-depends:      liquid-base       >= 4.14.1.0 && < 5
                      , liquid-containers >= 0.6.2.1  && < 0.7
                      , liquid-prelude    >= 0.8.10.2
                      , liquid-vector     >= 0.12.1.2 && < 0.13
                      , liquid-bytestring >= 0.10.0.0 && < 0.11
                      , liquidhaskell     >= 0.8.10.2
                      , process           >= 1.6.0.0 && < 1.7
                      , cmdargs           >= 0.10    && < 0.11

  if flag(devel)
    ghc-options: -Werror

executable gradual
  main-is:          src/Gradual.hs
  build-depends:    base            >= 4.8.1.0 && < 5
                  , cmdargs
                  , hscolour
                  , liquid-fixpoint >= 0.7.0.5
                  , liquidhaskell   >= 0.8.10.1
  default-language: Haskell2010
  buildable:        False
  ghc-options:      -W -threaded

  if flag(devel)
    ghc-options: -Werror

executable target
  main-is:          src/Target.hs
  build-depends:    base >= 4.8.1.0 && < 5, hint, liquidhaskell >= 0.8.10.2
  default-language: Haskell2010
  buildable:        False

