cabal-version:      1.22
name:               liquid-platform
version:            0.9.2.8
synopsis:           A battery-included platform for LiquidHaskell
description:        A battery-included platform for LiquidHaskell.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Simple

flag devel
  default:     False
  manual:      True
  description: turn on stricter error reporting for development

executable liquidhaskell
  main-is:            src/Liquid.hs
  default-language:   Haskell2010
  ghc-options:        -W -threaded
  if impl(ghc < 8.10.1)
    buildable: False
  else
    buildable: True
    build-depends:      base       >= 4.15.1.0 && < 5
                      , containers >= 0.6.4.1  && < 0.7
                      , liquid-prelude    >= 0.9.2.8
                      , liquid-vector     >= 0.13.1.0
                      , liquidhaskell     >= 0.9.2.8
                      , liquidhaskell-boot >= 0.9.2.8
                      , filepath
                      , process           >= 1.6.0.0 && < 1.7

  if flag(devel)
    ghc-options: -Werror
