cabal-version:      1.24
name:               liquid-prelude
version:            0.9.2.5
synopsis:           General utility modules for LiquidHaskell
description:        General utility modules for LiquidHaskell.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom

custom-setup
  setup-depends: Cabal<4, base<5, liquidhaskell-boot

library
  exposed-modules:  Language.Haskell.Liquid.RTick
                    Language.Haskell.Liquid.Prelude
                    Language.Haskell.Liquid.Foreign
                    Language.Haskell.Liquid.RTick.Combinators
                    Language.Haskell.Liquid.String
                    Language.Haskell.Liquid.List
                    Language.Haskell.Liquid.Equational
                    Language.Haskell.Liquid.Bag
                    Language.Haskell.Liquid.ProofCombinators
                    KMeansHelper
  hs-source-dirs:     src
  build-depends:      base          < 5
                    , ghc-prim
                    , bytestring           >= 0.10.12.1 && < 0.12
                    , containers           >= 0.6.4.1  && < 0.7
                    , liquidhaskell        >= 0.9.2.5
  default-language:   Haskell2010
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
