cabal-version:      1.24
name:               liquid-vector
version:            0.12.3.1
synopsis:           LiquidHaskell specs for the vector package
description:        LiquidHaskell specs for the vector package.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom

data-files:           src/Data/Vector.spec

custom-setup
  setup-depends: Cabal<4, base<5, liquidhaskell

library
  exposed-modules:    Data.Vector.Internal.Check
                      Data.Vector.Fusion.Util
                      Data.Vector.Fusion.Stream.Monadic
                      Data.Vector.Fusion.Bundle.Size
                      Data.Vector.Fusion.Bundle.Monadic
                      Data.Vector.Fusion.Bundle

                      Data.Vector.Generic.Mutable.Base
                      Data.Vector.Generic.Mutable
                      Data.Vector.Generic.Base
                      Data.Vector.Generic.New
                      Data.Vector.Generic

                      Data.Vector.Primitive.Mutable
                      Data.Vector.Primitive

                      Data.Vector.Storable.Internal
                      Data.Vector.Storable.Mutable
                      Data.Vector.Storable

                      Data.Vector.Unboxed.Base
                      Data.Vector.Unboxed.Mutable
                      Data.Vector.Unboxed

                      Data.Vector.Mutable
                      Data.Vector
  hs-source-dirs:     src
  build-depends:      liquid-base          < 4.16
                    , vector               >= 0.12.3.1 && < 0.13
                    , liquidhaskell        >= 0.9.0.2
  default-language:   Haskell2010
  default-extensions: PackageImports
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--no-positivity-check
  
