cabal-version:      1.24
name:               liquid-vector
version:            0.12.3.1.2
synopsis:           LiquidHaskell specs for the vector package
description:        LiquidHaskell specs for the vector package.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom

custom-setup
  setup-depends: Cabal<4, base<5, liquidhaskell-boot

library
  exposed-modules:    Data.Vector_LHAssumptions
  hs-source-dirs:     src
  build-depends:      base          < 5
                    , vector               >= 0.12.3.1 && < 0.14
                    , liquidhaskell        >= 0.9.2.5
  default-language:   Haskell2010
  default-extensions: PackageImports
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--no-positivity-check

